# RK3588-Satellite-Docking-Ring-Pose-System

./: README.md
3D打印设计文件/: gimbal_enclosure_parametric.scad
rk3588_tcp_server/: rk3588_server.c
sta_qt_client_v2/: CMakeLists.txt  README.md  SatelliteQtClientV2.pro
sta_qt_client_v2/src/: main.cpp
sta_qt_client_v2/src/app/: AppShell.cpp  AppShell.h  AppState.h
sta_qt_client_v2/src/common/: Protocol.h
sta_qt_client_v2/src/network/: TcpClientManager.cpp  TcpClientManager.h
sta_qt_client_v2/src/pages/: ConnectPage.cpp  ConnectPage.h  DashboardPage.cpp  DashboardPage.h  DebugLogWindow.cpp  DebugLogWindow.h  LoginPage.cpp  LoginPage.h
sta_qt_client_v2/src/video/: VideoReceiver.cpp  VideoReceiver.h  poseimagereceiver.cpp  poseimagereceiver.h
yolov8_ellipse/cpp/: kcf_tracker.cc  main.cc  postprocess.cc
yolov8_ellipse/model/: yolov8_ellipse.rknn
yolov8_pose/cpp/: CMakeLists.txt  kcf_tracker.h  main.cc
yolov8_pose/model/: ellipse_list.txt
